--- a/.hintrc
+++ b/.hintrc
@@ -1,10 +1,20 @@
 {
-  "extends": ["development"],
+  "extends": [
+    "development"
+  ],
   "hints": {
     "axe/forms": [
       "default",
       {
         "label": "off"
+      }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "user-select"
+        ]
       }
     ]
   }
